# funcky

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: validate.yml
docker/: Server.dockerfile
executor/: Cargo.toml
executor/src/: lib.rs  loader.rs  manager.rs
executor/src/tests/: mod.rs
funck/: Cargo.toml
funck-cli/: Cargo.toml
funck-cli/src/: main.rs
funck-cli/src/cli/: deploy.rs  mod.rs
funck-cli/src/sysutil/: zip.rs
funck-server/: Cargo.toml
funck-server/src/: main.rs
funck-server/src/server/: filters.rs  handlers.rs  message.rs  mod.rs  process.rs  response.rs
funck/src/: error.rs  export.rs  funcktion.rs  lib.rs
funck_server/: Cargo.toml
funck_server/src/: main.rs
funck_server/src/server/: filters.rs  handlers.rs  mod.rs  process.rs  response.rs
funck_svc/: Cargo.toml
funck_svc/src/: dirmove.rs  manager.rs
funck_svc/src/tests/apps/simple/: Cargo.toml
samples/notify/: Cargo.toml
samples/notify/src/: lib.rs
samples/testfn/: Cargo.toml
samples/testfn/src/: lib.rs
server/: Cargo.toml  error.rs
server/src/: main.rs
server/src/funcky/: builder.rs  loader.rs  manager.rs  mod.rs
server/src/server/: builder.rs  dirmove.rs  filters.rs  handlers.rs  loader.rs  manager.rs  mod.rs  process.rs  zip.rs
src/: main.rs  server_main.rs
src/funck/: builder.rs  error.rs  export.rs  funcktion.rs  lib.rs  loader.rs
src/funcky/: builder.rs  compiler.rs  dropdir.rs  loader.rs  manager.rs  mod.rs  status.rs
src/funcky/tests/apps/simple/src/: lib.rs
src/plugins/testfn/: Cargo.toml
src/plugins/testfn/src/: lib.rs
src/server/: filters.rs  handlers.rs  process.rs  response.rs  zip.rs
