[package]
name = "funcky"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "funck"
path = "src/funck/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "funcky"
path = "src/main.rs"

[dependencies]
libloading = "0.5"
snafu = "0.6.3"
