[package]
name = "server"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "funcky"
path = "src/server_main.rs"

[dependencies]
bytes = "0.5"
ctrlc = "3.1"
env_logger = "0.7"
futures = "0.3.4"
libloading = "0.5.2"
log = "0.4"
funck = "0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
snafu = "0.6.3"
tempfile = "3.1.0"
tokio = { version = "0.2", features = ["full"]}
warp = "0.2.2"
