[package]
name = "funck-server"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "funck-server"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
bytes = "0.5"
ctrlc = "3.1"
env_logger = "0.7"
futures = "0.3.4"
log = "0.4"
executor = {path = "../executor"}
funck = "0.2"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tempfile = "3.1.0"
tokio = { version = "0.2", features = ["full"]}
warp = "0.2.2"
