[package]
name = "funck_svc"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
funck = "0.2"
libloading = "0.5.2"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
snafu = "0.6"
