[package]
name = "server"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "funcky"
path = "src/main.rs"

[dependencies]
libloading = "0.5.2"
funck = { path = "../funck" }
snafu = "0.6.3"
