[package]
name = "notify"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
funck = { path = "/home/wdussault/src/github.com/dalloriam/libfunck"}
rood = {version = "0.1.4"}
serde = {version = "1.0.105", features = ["derive"]}
serde_json = "1.0.50"
